// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cite renders with accessKey="a,b,c,d" 1`] = `
<cite
  accessKey="a,b,c,d"
/>
`;

exports[`cite renders with autoCapitalize="characters" 1`] = `
<cite
  autoCapitalize="characters"
/>
`;

exports[`cite renders with autoCapitalize="none" 1`] = `
<cite
  autoCapitalize="none"
/>
`;

exports[`cite renders with autoCapitalize="off" 1`] = `
<cite
  autoCapitalize="off"
/>
`;

exports[`cite renders with autoCapitalize="on" 1`] = `
<cite
  autoCapitalize="on"
/>
`;

exports[`cite renders with autoCapitalize="sentences" 1`] = `
<cite
  autoCapitalize="sentences"
/>
`;

exports[`cite renders with autoCapitalize="words" 1`] = `
<cite
  autoCapitalize="words"
/>
`;

exports[`cite renders with children 1`] = `
<cite>
  TEST
</cite>
`;

exports[`cite renders with className="foo bar baz" 1`] = `
<cite
  className="foo bar baz"
/>
`;

exports[`cite renders with contentEditable="false" 1`] = `
<cite
  contentEditable="false"
/>
`;

exports[`cite renders with contentEditable="true" 1`] = `
<cite
  contentEditable="true"
/>
`;

exports[`cite renders with dir="auto" 1`] = `
<cite
  dir="auto"
/>
`;

exports[`cite renders with dir="ltr" 1`] = `
<cite
  dir="ltr"
/>
`;

exports[`cite renders with dir="rtl" 1`] = `
<cite
  dir="rtl"
/>
`;

exports[`cite renders with draggable="false" 1`] = `
<cite
  draggable="false"
/>
`;

exports[`cite renders with draggable="true" 1`] = `
<cite
  draggable="true"
/>
`;

exports[`cite renders with empty attributes 1`] = `<cite />`;

exports[`cite renders with hidden="false" 1`] = `
<cite
  hidden={false}
/>
`;

exports[`cite renders with hidden="true" 1`] = `
<cite
  hidden={true}
/>
`;

exports[`cite renders with id="TEST" 1`] = `
<cite
  id="TEST"
/>
`;

exports[`cite renders with inputMode="decimal" 1`] = `
<cite
  inputMode="decimal"
/>
`;

exports[`cite renders with inputMode="email" 1`] = `
<cite
  inputMode="email"
/>
`;

exports[`cite renders with inputMode="none" 1`] = `
<cite
  inputMode="none"
/>
`;

exports[`cite renders with inputMode="numeric" 1`] = `
<cite
  inputMode="numeric"
/>
`;

exports[`cite renders with inputMode="search" 1`] = `
<cite
  inputMode="search"
/>
`;

exports[`cite renders with inputMode="tel" 1`] = `
<cite
  inputMode="tel"
/>
`;

exports[`cite renders with inputMode="text" 1`] = `
<cite
  inputMode="text"
/>
`;

exports[`cite renders with inputMode="url" 1`] = `
<cite
  inputMode="url"
/>
`;

exports[`cite renders with is="foo" 1`] = `
<cite
  is="foo"
/>
`;

exports[`cite renders with itemID="https://google.com/" 1`] = `
<cite
  itemID="https://google.com/"
/>
`;

exports[`cite renders with itemProp="https://google.com/" 1`] = `
<cite
  itemProp="https://google.com/"
/>
`;

exports[`cite renders with itemRef="foo bar" 1`] = `
<cite
  itemRef="foo bar"
/>
`;

exports[`cite renders with itemScope="false" 1`] = `
<cite
  itemScope={false}
/>
`;

exports[`cite renders with itemScope="true" 1`] = `
<cite
  itemScope={true}
/>
`;

exports[`cite renders with itemType="https://google.com/" 1`] = `
<cite
  itemType="https://google.com/"
/>
`;

exports[`cite renders with lang="" 1`] = `
<cite
  lang=""
/>
`;

exports[`cite renders with lang="es-419" 1`] = `
<cite
  lang="es-419"
/>
`;

exports[`cite renders with slot="TEST" 1`] = `
<cite
  slot="TEST"
/>
`;

exports[`cite renders with spellCheck="false" 1`] = `
<cite
  spellCheck="false"
/>
`;

exports[`cite renders with spellCheck="true" 1`] = `
<cite
  spellCheck="true"
/>
`;

exports[`cite renders with style="[object Object]" 1`] = `
<cite
  style={
    Object {
      "color": "#000000",
    }
  }
/>
`;

exports[`cite renders with tabIndex="1" 1`] = `
<cite
  tabIndex={1}
/>
`;

exports[`cite renders with title="TEST" 1`] = `
<cite
  title="TEST"
/>
`;

exports[`cite renders with translate="no" 1`] = `
<cite
  translate="no"
/>
`;

exports[`cite renders with translate="yes" 1`] = `
<cite
  translate="yes"
/>
`;

exports[`cite renders without attributes 1`] = `<cite />`;
